fixed spacing issues at bottom of pages

--- a/src/pages/Resume.css
+++ b/src/pages/Resume.css
@@ -6,6 +6,7 @@
     max-width: 900px;
     margin: 0 auto;
     margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 10px;
   }
   
